@@ -1,3 +1,7 @@
+2009-11-27  Xavier Perseguers  <typo3@perseguers.ch>
+
+	* Reorganized unit-tests
+
 2009-11-25  Xavier Perseguers  <typo3@perseguers.ch>
 
 	* Set version to 1.0.1
